<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
	>
	<LinearLayout
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:gravity="center"
    	android:orientation="horizontal"
	    >
		<LinearLayout
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:layout_weight="1"
		    >
		    <EditText
		        android:id="@+id/startPos"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:hint="@string/startpos"
		        android:layout_marginLeft="20dp" />
	
		    <EditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/endPos"
				android:hint="@string/endpos"
				android:layout_marginLeft="20dp"
		        />
	    </LinearLayout>
	    <ImageButton
	        android:contentDescription="@string/app_name"
	        android:id="@+id/transferSearchButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/gfwb"
	        android:layout_marginRight="15dp"
	        android:background="@android:color/transparent"
	        android:layout_marginLeft="5dp"
	        />
	</LinearLayout>
	<ListView
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	   	android:id="@+id/busTransferAns"
	   	android:layout_marginLeft="20dp"
	   	android:layout_marginRight="20dp"
	    />
</LinearLayout>
