<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center" >
    <View
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="@android:color/darker_gray"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    />
    <Button 
        android:hint="@string/buslinesearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/busLineSearchBtton"
        android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:background="@android:color/transparent"
        />
	<View
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="@android:color/darker_gray"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    />
	<Button 
        android:hint="@string/bustransfersearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/busTransferSearchButton"
        android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:background="@android:color/transparent"
        />
	<View
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="@android:color/darker_gray"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    />
	<Button 
        android:hint="@string/nearbussearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nearBusSearchButton"
        android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:background="@android:color/transparent"
        />
	<View
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="@android:color/darker_gray"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    />
	    
</LinearLayout>
